--- a/token-vesting.html
+++ b/token-vesting.html
@@ -104,7 +104,8 @@
                             <a class="nav-link me-lg-3" href="https://explorer.ezchain.com/validators">Validators </a>
                         </li>
                         <li class="nav-item user-guide">
-                            <a class="nav-link me-lg-3" href="./staking-mainnet.html" style="color: #fd7e14;">User guides</a>
+                            <a class="nav-link me-lg-3" href="./staking-mainnet.html" style="color: #fd7e14;">User
+                                guides</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" href="#comunity">Community</a>
@@ -120,73 +121,71 @@
                 <div class="hidden lg:block container mx-auto">
                     <nav id="nav" class="lg:text-sm lg:leading-6 fixed top-24">
                         <div class="sticky top-0 -ml-0.5 pointer-events-none">
-                            <div class="h-10 bg-white dark:bg-slate-900"></div>
+                            <div class="h-10 bg-white"></div>
                         </div>
                         <ul>
                             <li><a href="/staking-mainnet.html"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 hover:text-orange-400 font-semibold dark:text-orange-700">
+                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 text-slate-700 hover:text-orange-400 font-medium">
                                     <div
-                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-orange-200 dark:group-hover:bg-orange-500 dark:bg-orange-500 dark:highlight-white/10">
+                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10">
                                         <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
                                             <path fill-rule="evenodd" clip-rule="evenodd"
                                                 d="M8.5 7c1.093 0 2.117.27 3 .743V17a6.345 6.345 0 0 0-3-.743c-1.093 0-2.617.27-3.5.743V7.743C5.883 7.27 7.407 7 8.5 7Z"
-                                                class="fill-orange-200 group-hover:fill-orange-500 dark:fill-orange-300 dark:group-hover:fill-orange-300">
+                                                class="fill-orange-200 group-hover:fill-orange-500">
                                             </path>
                                             <path fill-rule="evenodd" clip-rule="evenodd"
                                                 d="M15.5 7c1.093 0 2.617.27 3.5.743V17c-.883-.473-2.407-.743-3.5-.743s-2.117.27-3 .743V7.743a6.344 6.344 0 0 1 3-.743Z"
-                                                class="fill-orange-400 group-hover:fill-orange-500 dark:fill-orange-200 dark:group-hover:fill-orange-200">
+                                                class="fill-orange-400 group-hover:fill-orange-500">
                                             </path>
                                         </svg>
                                     </div>Introduction to EZC staking
                                 </a></li>
                             <li><a href="/guides.html"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium hover:text-orange-400 text-slate-700 dark:text-slate-400 dark:hover:text-slate-300">
+                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 text-slate-700 font-medium hover:text-orange-400">
                                     <div
-                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-indigo-200 dark:group-hover:bg-indigo-500 dark:bg-slate-800 dark:highlight-white/5">
+                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10">
                                         <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
                                             <path d="m6 9 6-3 6 3v6l-6 3-6-3V9Z"
-                                                class="fill-indigo-100 group-hover:fill-indigo-200 dark:fill-slate-400">
+                                                class="fill-indigo-100 group-hover:fill-indigo-200 ">
                                             </path>
                                             <path d="m6 9 6 3v7l-6-3V9Z"
-                                                class="fill-indigo-300 group-hover:fill-indigo-400 dark:group-hover:fill-indigo-300 dark:fill-slate-500">
+                                                class="fill-indigo-300 group-hover:fill-indigo-400">
                                             </path>
                                             <path d="m18 9-6 3v7l6-3V9Z"
-                                                class="fill-indigo-400 group-hover:fill-indigo-500 dark:group-hover:fill-indigo-400 dark:fill-slate-600">
+                                                class="fill-indigo-400 group-hover:fill-indigo-500">
                                             </path>
                                         </svg>
                                     </div>Detailed instructions for EZC staking
                                 </a></li>
                             <li><a href="/token-vesting.html"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-orange-400 hover:text-orange-400 dark:text-slate-400 dark:hover:text-slate-300">
+                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-orange-400 hover:text-orange-400">
                                     <div
-                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-pink-200 dark:group-hover:bg-pink-500 dark:bg-slate-800 dark:highlight-white/5">
+                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10">
                                         <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
                                             <path fill-rule="evenodd" clip-rule="evenodd"
                                                 d="M19 12a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"
-                                                class="fill-pink-400 group-hover:fill-pink-500 dark:group-hover:fill-pink-300 dark:fill-slate-600">
+                                                class="fill-pink-400 group-hover:fill-pink-500">
                                             </path>
                                             <path
                                                 d="M11.082 9.107a.685.685 0 0 0-.72-.01.757.757 0 0 0-.362.653v4.5c0 .27.138.52.362.653.224.133.5.13.72-.01l3.571-2.25A.758.758 0 0 0 15 12a.758.758 0 0 0-.347-.643l-3.571-2.25Z"
-                                                class="fill-pink-50 group-hover:fill-pink-100 dark:group-hover:fill-white dark:fill-slate-400">
+                                                class="fill-pink-50 group-hover:fill-pink-100">
                                             </path>
                                         </svg>
-                                    </div>How to withdraw EZC from SM Token Vesting
+                                    </div>How investors can withdraw EZC
                                 </a></li>
                             <li><a href="#"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-slate-700 hover:text-orange-400 dark:text-slate-400 dark:hover:text-slate-300">
+                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-slate-700 hover:text-orange-400">
                                     <div
-                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-blue-200 dark:group-hover:bg-blue-500 dark:bg-slate-800 dark:highlight-white/5">
+                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10">
                                         <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
                                             <path d="M4 12a7 7 0 0 1 7-7h2a7 7 0 1 1 0 14h-2a7 7 0 0 1-7-7Z"
-                                                class="fill-blue-400 group-hover:fill-blue-500 dark:group-hover:fill-blue-400 dark:fill-slate-600">
+                                                class="fill-blue-400 group-hover:fill-blue-500">
                                             </path>
                                             <path d="M10.25 9.75 7.75 12l2.5 2.25" stroke-width="1.5"
-                                                stroke-linecap="round" stroke-linejoin="round"
-                                                class="stroke-blue-50 dark:stroke-slate-400 dark:group-hover:stroke-white dark:stroke-slate-400">
+                                                stroke-linecap="round" stroke-linejoin="round" class="stroke-blue-50">
                                             </path>
                                             <path d="m13.75 9.75 2.5 2.25-2.5 2.25" stroke-width="1.5"
-                                                stroke-linecap="round" stroke-linejoin="round"
-                                                class="stroke-blue-200 dark:group-hover:stroke-white dark:stroke-slate-400">
+                                                stroke-linecap="round" stroke-linejoin="round" class="stroke-blue-200">
                                             </path>
                                         </svg>
                                     </div>Upgrade Guide
@@ -197,7 +196,7 @@
                 <div class="lg:pl-[25rem] 2xl:pl-[28.5rem]">
                     <div class="max-w-3xl mx-auto pt-32 xl:max-w-none xl:ml-0 xl:mr-[15.5rem] xl:pr-16">
                         <div id="header" class="relative -z-20 mb-12">
-                            <h1 class="text-xl font-bold text-orange-400">How to withdraw EZC from SM Token Vesting</h1>
+                            <h1 class="text-xl font-bold text-orange-400">How investors can withdraw EZC</h1>
                             <h2 class="text-base mt-2 font-bold">Step 1: install Metamask and import/switch to your
                                 investor wallet that you registered with EZChain</h2>
                             <h2 class="text-base mt-2 font-bold">Step 2: Access to smart-contract on Blockchain Explorer
