--- a/staking-mainnet.html
+++ b/staking-mainnet.html
@@ -56,7 +56,8 @@
 
 <body class="antialiased text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-900">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light fixed top-0 bg-white-a500 z-100 right-0 left-0" id="header-nav" role="navigation">
+        <nav class="navbar navbar-expand-lg navbar-light fixed top-0 bg-white-a500 z-100 right-0 left-0" id="header-nav"
+            role="navigation">
             <div class="container p-0 xl-container" style="max-width: 1170px;">
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -79,34 +80,32 @@
                 <div class="collapse navbar-collapse text-light z-99" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto me-2">
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3" href="https://ezchain.gitbook.io/">Developers
-                            </a>
+                            <a class="nav-link me-lg-3" href="https://ezchain.gitbook.io/">Developers </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3" href="https://wallet.ezchain.com/"> Web
-                                wallet</a>
+                            <a class="nav-link me-lg-3" href="https://wallet.ezchain.com/"> Web wallet</a>
                         </li>
                         <li class="nav-item nav-link-explorer">
                             <a class="nav-link me-lg-3 big-link" href="#">Explorer</a>
                             <ul class="sub-menu-explorer">
                                 <div class="explorer_chain">
                                     <li class="nav-item">
-                                        <a class="nav-link me-lg-3"
-                                            href="https://cchain-explorer.ezchain.com/"> Explorer (C-chain)</a>
+                                        <a class="nav-link me-lg-3" href="https://cchain-explorer.ezchain.com/">
+                                            Explorer (C-chain)</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link me-lg-3"
-                                            href="https://explorer.ezchain.com/"> Explorer (X-Chain & P-Chain)</a>
+                                        <a class="nav-link me-lg-3" href="https://explorer.ezchain.com/"> Explorer
+                                            (X-Chain & P-Chain)</a>
                                     </li>
                                 </div>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3"
-                                href="https://explorer.ezchain.com/validators">Validators </a>
+                            <a class="nav-link me-lg-3" href="https://explorer.ezchain.com/validators">Validators </a>
                         </li>
                         <li class="nav-item user-guide">
-                            <a class="nav-link me-lg-3" href="./staking-mainnet.html" style="color: #fd7e14;">User guides</a>
+                            <a class="nav-link me-lg-3" href="./staking-mainnet.html" style="color: #fd7e14;">User
+                                guides</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" href="#comunity">Community</a>
@@ -119,77 +118,74 @@
     <div id="__next">
         <div>
             <div class="container mx-auto" style="max-width: 1170px;">
-                <div
-                    class="hidden lg:block container mx-auto">
+                <div class="hidden lg:block container mx-auto">
                     <nav id="nav" class="lg:text-sm lg:leading-6 fixed top-24">
                         <div class="sticky top-0 -ml-0.5 pointer-events-none">
-                            <div class="h-10 bg-white dark:bg-slate-900"></div>
+                            <div class="h-10 bg-white"></div>
                         </div>
                         <ul>
                             <li><a href="/staking-mainnet.html"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 text-orange-400 hover:text-orange-400 font-semibold dark:text-orange-700">
+                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 text-orange-400 hover:text-orange-400 font-semibold">
                                     <div
-                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-orange-200 dark:group-hover:bg-orange-500 dark:bg-orange-500 dark:highlight-white/10">
+                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10">
                                         <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
                                             <path fill-rule="evenodd" clip-rule="evenodd"
                                                 d="M8.5 7c1.093 0 2.117.27 3 .743V17a6.345 6.345 0 0 0-3-.743c-1.093 0-2.617.27-3.5.743V7.743C5.883 7.27 7.407 7 8.5 7Z"
-                                                class="fill-orange-200 group-hover:fill-orange-500 dark:fill-orange-300 dark:group-hover:fill-orange-300">
+                                                class="fill-orange-200 group-hover:fill-orange-500">
                                             </path>
                                             <path fill-rule="evenodd" clip-rule="evenodd"
                                                 d="M15.5 7c1.093 0 2.617.27 3.5.743V17c-.883-.473-2.407-.743-3.5-.743s-2.117.27-3 .743V7.743a6.344 6.344 0 0 1 3-.743Z"
-                                                class="fill-orange-400 group-hover:fill-orange-500 dark:fill-orange-200 dark:group-hover:fill-orange-200">
+                                                class="fill-orange-400 group-hover:fill-orange-500">
                                             </path>
                                         </svg>
                                     </div>Introduction to EZC staking
                                 </a></li>
                             <li><a href="/guides.html"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium hover:text-orange-400 text-slate-700 dark:text-slate-400 dark:hover:text-slate-300">
+                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-slate-700 hover:text-orange-400">
                                     <div
-                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-indigo-200 dark:group-hover:bg-indigo-500 dark:bg-slate-800 dark:highlight-white/5">
+                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10">
                                         <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
                                             <path d="m6 9 6-3 6 3v6l-6 3-6-3V9Z"
-                                                class="fill-indigo-100 group-hover:fill-indigo-200 dark:fill-slate-400">
+                                                class="fill-indigo-100 group-hover:fill-indigo-200 ">
                                             </path>
                                             <path d="m6 9 6 3v7l-6-3V9Z"
-                                                class="fill-indigo-300 group-hover:fill-indigo-400 dark:group-hover:fill-indigo-300 dark:fill-slate-500">
+                                                class="fill-indigo-300 group-hover:fill-indigo-400">
                                             </path>
                                             <path d="m18 9-6 3v7l6-3V9Z"
-                                                class="fill-indigo-400 group-hover:fill-indigo-500 dark:group-hover:fill-indigo-400 dark:fill-slate-600">
+                                                class="fill-indigo-400 group-hover:fill-indigo-500">
                                             </path>
                                         </svg>
                                     </div>Detailed instructions for EZC staking
                                 </a></li>
                             <li><a href="/token-vesting.html"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-slate-700 hover:text-orange-400 dark:text-slate-400 dark:hover:text-slate-300">
+                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-slate-700 hover:text-orange-400">
                                     <div
-                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-pink-200 dark:group-hover:bg-pink-500 dark:bg-slate-800 dark:highlight-white/5">
+                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10">
                                         <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
                                             <path fill-rule="evenodd" clip-rule="evenodd"
                                                 d="M19 12a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"
-                                                class="fill-pink-400 group-hover:fill-pink-500 dark:group-hover:fill-pink-300 dark:fill-slate-600">
+                                                class="fill-pink-400 group-hover:fill-pink-500">
                                             </path>
                                             <path
                                                 d="M11.082 9.107a.685.685 0 0 0-.72-.01.757.757 0 0 0-.362.653v4.5c0 .27.138.52.362.653.224.133.5.13.72-.01l3.571-2.25A.758.758 0 0 0 15 12a.758.758 0 0 0-.347-.643l-3.571-2.25Z"
-                                                class="fill-pink-50 group-hover:fill-pink-100 dark:group-hover:fill-white dark:fill-slate-400">
+                                                class="fill-pink-50 group-hover:fill-pink-100">
                                             </path>
                                         </svg>
-                                    </div>How to withdraw EZC from SM Token Vesting
+                                    </div>How investors can withdraw EZC
                                 </a></li>
                             <li><a href="#"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-slate-700 hover:text-orange-400 dark:text-slate-400 dark:hover:text-slate-300">
+                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-slate-700 hover:text-orange-400">
                                     <div
-                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-blue-200 dark:group-hover:bg-blue-500 dark:bg-slate-800 dark:highlight-white/5">
+                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10">
                                         <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
                                             <path d="M4 12a7 7 0 0 1 7-7h2a7 7 0 1 1 0 14h-2a7 7 0 0 1-7-7Z"
-                                                class="fill-blue-400 group-hover:fill-blue-500 dark:group-hover:fill-blue-400 dark:fill-slate-600">
+                                                class="fill-blue-400 group-hover:fill-blue-500">
                                             </path>
                                             <path d="M10.25 9.75 7.75 12l2.5 2.25" stroke-width="1.5"
-                                                stroke-linecap="round" stroke-linejoin="round"
-                                                class="stroke-blue-50 dark:stroke-slate-400 dark:group-hover:stroke-white dark:stroke-slate-400">
+                                                stroke-linecap="round" stroke-linejoin="round" class="stroke-blue-50">
                                             </path>
                                             <path d="m13.75 9.75 2.5 2.25-2.5 2.25" stroke-width="1.5"
-                                                stroke-linecap="round" stroke-linejoin="round"
-                                                class="stroke-blue-200 dark:group-hover:stroke-white dark:stroke-slate-400">
+                                                stroke-linecap="round" stroke-linejoin="round" class="stroke-blue-200">
                                             </path>
                                         </svg>
                                     </div>Upgrade Guide
@@ -250,7 +246,8 @@
                             </ul>
                         </div>
                         <div>
-                            <a class="font-bold inline-block hover:text-orange-400 text-black-a400 text-base cursor-pointer mt-4 float-right mb-4" href="./guides.html">Detailed instructions for EZC staking ></a>
+                            <a class="font-bold inline-block hover:text-orange-400 text-black-a400 text-base cursor-pointer mt-4 float-right mb-4"
+                                href="./guides.html">Detailed instructions for EZC staking ></a>
                         </div>
                     </div>
                 </div>
